--- a/p1/styles/styles.css
+++ b/p1/styles/styles.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  background-color: #e4e4e4;
   color: #303030;
 }
 
@@ -20,18 +21,72 @@ h1 {
 }
 
 header {
-  background-color: #f0ce46;
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
+  background-color: #ffdd00;
+}
+
+footer {
+  height: 20px;
+  margin-top: 60px;
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
+  background-color: #ffdd00;
 }
 
 .container {
   width: 100%;
-  max-width: 1000px;
+  max-width: 920px;
   margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;
 }
 
-.header {
+.card {
+  margin-top: 10px;
+  background-color: white;
+  box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.card.header {
+  margin-top: 50px;
+}
+
+.card .content {
+  padding: 15px 20px;
+}
+
+.card .content .title {
+  font-size: 24px;
+}
+
+.movie-card {
+  background-color: white;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 0 0 4px 4px;
+}
+
+.movie-card .poster-placeholder {
+  padding-top: 120%;
+  background-color: deeppink;
+}
+
+.movie-card .content {
+  padding: 10px;
+}
+
+.movie-card .content .title {
+  font-size: 20px;
+}
+
+.movie-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  margin-top: 10px;
+}
+
+header .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -39,15 +94,15 @@ header {
   padding-bottom: 10px;
 }
 
-.web-name {
+.header.web-name {
   font-size: 28px;
 }
 
-.header-buttons {
+.header .buttons {
   display: flex;
 }
 
-.header-buttons button {
+.header .buttons button {
   margin-left: 15px;
   padding: 7px 20px;
   border-radius: 4px;
