--- a/p1/styles/styles.css
+++ b/p1/styles/styles.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background-color: #e4e4e4;
+  background-color: #EEF5F6;
   color: #303030;
 }
 
@@ -18,6 +18,7 @@ button {
 
 h1 {
   margin: 0;
+  color: #4a4a4a;
 }
 
 header {
@@ -84,6 +85,64 @@ footer {
   grid-column-gap: 10px;
   grid-row-gap: 10px;
   margin-top: 10px;
+}
+
+
+.detailed {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  column-gap: 0px;
+}
+
+.detailed .poster-placeholder {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  padding-top: 120%;
+  background-color: deeppink;
+}
+
+.detailed .info {
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display: grid;
+  grid-template-rows: 1fr 5fr;
+}
+
+.detailed .info .header {
+  padding: 10px;
+}
+
+.details {
+  display: grid;
+  row-gap: 10px;
+  padding: 10px;
+  background-color: #DCDCDC;
+}
+
+.details .item {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  font-size: 20px;
+}
+
+.details .item .general {
+  padding: 15px;
+  background-color: #EFEFEF;
+}
+
+.details .item .specific {
+  padding: 15px;
+  padding-left: 10px;
+  background-color: #FFFFFF;
+}
+
+.info .header .title {
+
+  padding-left: 10px;
 }
 
 header .header {
