--- a/p1/styles/styles.css
+++ b/p1/styles/styles.css
@@ -9,11 +9,11 @@ body {
   color: #303030;
 }
 
-button {
+a {
   margin: 0;
-  border: none;
   font-weight: bold;
   color: #303030;
+  text-decoration: none;
 }
 
 h1 {
@@ -23,14 +23,14 @@ h1 {
 
 header {
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
-  background-color: #ffdd00;
+  background-color:#ffda74;
 }
 
 footer {
   height: 20px;
   margin-top: 60px;
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.15);
-  background-color: #ffdd00;
+  background-color: #ffda74;
 }
 
 .container {
@@ -52,12 +52,21 @@ footer {
   margin-top: 50px;
 }
 
+.card.horizontal {
+  display: flex;
+  justify-content: space-between;
+}
+
 .card .content {
   padding: 15px 20px;
 }
 
 .card .content .title {
   font-size: 24px;
+}
+
+.card .content .subtitle {
+  font-size: 20px;
 }
 
 .movie-card {
@@ -141,7 +150,6 @@ footer {
 }
 
 .info .header .title {
-
   padding-left: 10px;
 }
 
@@ -161,10 +169,16 @@ header .header {
   display: flex;
 }
 
-.header .buttons button {
+.header .buttons a {
   margin-left: 15px;
   padding: 7px 20px;
   border-radius: 4px;
+}
+
+.login-image-placeholder {
+  width: 50%;
+  padding-top: 40%;
+  background-color: deeppink;
 }
 
 #cart {
