--- a/p1/styles/styles.css
+++ b/p1/styles/styles.css
@@ -112,8 +112,17 @@ footer {
 }
 
 .card.movie .poster-placeholder {
-  padding-top: 120%;
+  position: relative;
+  padding-top: 150%;
   background-color: deeppink;
+}
+
+.card.movie .poster-placeholder img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .card.movie .content {
@@ -189,12 +198,21 @@ footer {
 }
 
 .detailed .poster-placeholder {
+  position: relative;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 3;
-  padding-top: 120%;
+  padding-top: 150%;
   background-color: deeppink;
+}
+
+.detailed .poster-placeholder img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .detailed .info {
@@ -207,7 +225,7 @@ footer {
 }
 
 .detailed .info .header {
-  padding: 10px;
+  padding: 20px;
 }
 
 .details {
