Pequeña corrección css

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -73,7 +73,7 @@
           </div>
         </form>
     </div>
-    <div class="movie-grid search-results">
+    <div class="movie-grid">
         {% block search_results %}{% endblock %}
     </div>
   </div>
