--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -147,7 +147,7 @@ select:invalid {
 
 .movie-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   column-gap: 10px;
   grid-row-gap: 10px;
   margin-top: 10px;
@@ -159,10 +159,6 @@ select:invalid {
 
 .movie-search-params {
   grid-template-columns: 3fr 1fr;
-}
-
-.search-results {
-  grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
 }
 
 .form.vertical {
