--- a/app/templates/movie-detail.html
+++ b/app/templates/movie-detail.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="card first row no-gap detail">
       <div class="poster-placeholder">
-        <img src={{ poster.url }} alt={{ poster.alt }}>
+        <img src={{ movie.poster }} alt={{ movie.poster_alt }}>
       </div>
       <div class="info">
         <div class="content">
