--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="{{ url_for('static', filename='media/icons/superpelis.png') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/styles.css') }}"/>
     <meta charset="UTF-8"/>
+    {% block imports %}{% endblock %}
   </head>
   <body>
     <header>
