--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block imports %}
+  <script src="{{ url_for('static', filename='scripts/RegisterValidation.js') }}"></script>
+{% endblock %}
+
 {% block content %}
   <div class="container">
     <div class="card first">
@@ -9,22 +13,22 @@
     </div>
     <div class="card">
       <div class="content">
-        <form class="form vertical" action="">
+        <form class="form vertical" action="" method="post">
           <div class="row big-gap">
             <div>
               <h2>Datos de la cuenta</h1>
-              <input class="first" type="email" name="email" placeholder="Correo electrónico"/>
-              <input type="text" name="username" placeholder="Nombre de usuario"/>
+              <input class="first" type="email" name="email" placeholder="Correo electrónico" required/>
+              <input type="text" name="username" placeholder="Nombre de usuario" minlength="6" maxlength="20" required/>
               <div class="row">
-                <input type="password" name="password" placeholder="Contraseña"/>
-                <input type="password" name="passwordCheck" placeholder="Repetir contraseña"/>
+                <input type="password" name="password" placeholder="Contraseña" minlength="6" maxlength="20" required/>
+                <input type="password" name="passwordCheck" placeholder="Repetir contraseña" maxlength="20" required/>
               </div>
             </div>
             <div>
               <h2>Datos del cliente</h1>
               <div class="row two-three">
-                <input class="first" type="text" name="fullname" placeholder="Nombre"/>
-                <input type="text" name="lastname" placeholder="Apellidos"/>
+                <input class="first" type="text" name="fullname" placeholder="Nombre" minlength="3" maxlength="15" required/>
+                <input type="text" name="lastname" placeholder="Apellidos" minlength="3" maxlength="40" required/>
               </div>
               <div class="row one-three">
                 <select name="gender" required>
@@ -33,12 +37,12 @@
                   <option value="female">Mujer</option>
                   <option value="other">Otro</option>
                 </select> 
-                <input type="text" name="direction" placeholder="Direccion"/>
+                <input type="text" name="direction" placeholder="Dirección" minlength="6" maxlength="40" required/>
               </div>
-              <input type="text" name="bank-account" placeholder="Número de cuenta"/>
+              <input type="text" name="bank-account" placeholder="Número de cuenta" minlength="10" maxlength="40" required/>
             </div>
           </div>
-          <input class="submit" type="submit" value="Crear cuenta"/>
+          <input class="submit" type="submit" value="Crear cuenta" onclick="validateFields()" required/>
         </form>
       </div>
     </div>
