--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,13 +15,23 @@
           <a href="{{ url_for('index') }}">
             <h1>SuperPelis.net</h1>
           </a>
-          <div class="buttons">
-            <a id="cart">
-              <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
-            </a>
-            <a id="login" href="{{ url_for('login') }}">Iniciar sesión</a>
-            <a id="register" href="{{ url_for('register') }}">Registro</a>
-          </div>
+          {% if not session.user %}
+            <div class="buttons">
+                <a id="cart">
+                  <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
+                </a>
+                <a id="login" href="{{ url_for('login') }}">Iniciar sesión</a>
+                <a id="register" href="{{ url_for('register') }}">Registro</a>
+            </div>
+          {% else %}
+          Bienvenido {{ session.user.fullname }}
+            <div class="buttons">
+                <a id="cart">
+                  <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
+                </a>
+                <a id="logout" href="{{ url_for('logout') }}">Cerrar sesión</a>
+            </div>
+          {% endif %}
         </div>
       </div>
     </header>
