--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
+  {% with messages = get_flashed_messages() %}
+    {% for message in messages %}
+      <div class="card container alert">
+        <strong>Error:</strong> {{ message }}
+      </div>
+    {% endfor %}
+  {% endwith %}
   <div class="container">
     <div class="card first">
       <div class="content">
@@ -10,7 +17,7 @@
     <div class="card horizontal">
       <div class="content">
         <h2>Datos de la cuenta</h1>
-        <form class="form vertical" action="">
+        <form class="form vertical" action="" method="post">
           <input class="first" type="text" name="username" placeholder="Correo electrónico o nombre de usuario"/>
           <input type="password" name="password" placeholder="Contraseña"/>
           <input class="submit left" type="submit" value="Iniciar sesión"/>
