--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -322,10 +322,12 @@ select:invalid {
 }
 
 .alert {
-  width: 300px;
-  margin-top: 40px;
+  text-align: center;
+  margin-top: 25px;
+  margin-bottom: -15px;
   padding: 15px;
-  background-color: rgb(255, 185, 158)
+  padding-left: 30px;
+  background-color: rgb(247, 139, 136)
 }
 
 #cart {
