--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
           </a>
           {% if not session.user %}
             <div class="buttons">
-                <a id="cart">
+                <a id="cart" href="{{ url_for('shopping_cart')}}">
                   <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
                 </a>
                 <a id="login" href="{{ url_for('login') }}">Iniciar sesión</a>
@@ -26,7 +26,7 @@
           {% else %}
           Bienvenido, {{ session.user.fullname }}
             <div class="buttons">
-                <a id="cart">
+                <a id="cart" href="{{ url_for('shopping_cart')}}">
                   <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
                 </a>
                 <a id="logout" href="{{ url_for('logout') }}">Cerrar sesión</a>
