Añadido AJAX a las búsquedas

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <title>SuperPelis.net</title>
     <link rel="icon" href="{{ url_for('static', filename='media/icons/superpelis.png') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/styles.css') }}"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta charset="UTF-8"/>
     {% block imports %}{% endblock %}
   </head>
