--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,21 @@
 {% extends "base.html" %}
 
+{% block imports %}
+  <script>
+    function search() {
+      let params = {q: $("#q").val(), genre: $("#genre").val()};
+      $("#search-result").load("{{ url_for('search') }}" + "?" + $.param(params));
+      console.log("{{ url_for('search') }}" + "?" + $.param(params));
+      return false;
+    }
+
+    $(document).ready(() => {
+      search();
+      $("#latest-movies").load("{{ url_for('latest_movies') }}");
+    });
+  </script>
+{% endblock %}
+
 {% block content %}
   <div class="container">
     <div class="card first">
@@ -7,52 +23,19 @@
         <h1>Últimas películas</h1>
       </div>
     </div>
-    <div class="movie-grid">
-      <a class="card movie" href="{{ url_for('movie_detail', movie_id=1) }}">
-        <div class="poster-placeholder">
-          <img src="./static/media/posters/1.jpg" alt="taxi-driver">
-        </div>
-        <div class="content">
-          <h1>Taxi Driver</h1>
-        </div>
-      </a>
-      <a class="card movie" href="{{ url_for('movie_detail', movie_id=2) }}">
-        <div class="poster-placeholder">
-          <img src="./static/media/posters/2.jpg" alt="zombieland">
-        </div>
-        <div class="content">
-          <h1>Zombieland</h1>
-        </div>
-      </a>
-      <a class="card movie" href="{{ url_for('movie_detail', movie_id=4) }}">
-        <div class="poster-placeholder">
-          <img src="./static/media/posters/4.jpg" alt="fight-club">
-        </div>
-        <div class="content">
-          <h1>Fight Club</h1>
-        </div>
-      </a>
-      <a class="card movie" href="{{ url_for('movie_detail', movie_id=7) }}">
-        <div class="poster-placeholder">
-          <img src="./static/media/posters/7.jpg" alt="harry-potter-iii">
-        </div>
-        <div class="content">
-          <h1>Harry Potter III</h1>
-        </div>
-      </a>
-    </div>
+    <div id="latest-movies"></div>
     <div class="card first">
       <div class="content">
         <h1>Búsqueda de películas</h1>
       </div>
     </div>
     <div class="card">
-        <form class="form" method="get" action="">
+        <form class="form" onsubmit="return search()">
           <div class="row no-gap movie-search">
             <div class="content">
               <div class="row movie-search-params">
-                <input type="text" name="q" placeholder="Búsqueda..."/>
-                <select name="genre">
+                <input type="text" id="q" placeholder="Búsqueda..."/>
+                <select id="genre">
                   <option value="" selected disabled hidden>Categoría</option>
                   <option value="action">Acción</option>
                   <option value="animation">Animación</option>
@@ -64,7 +47,7 @@
                   <option value="horror">Horror</option>
                   <option value="thriller">Thriller</option>
                 </select> 
-              </div>               
+              </div>
             </div>
             <div id="search-icon">
               <input class="submit" type="Submit" value="">
@@ -73,17 +56,6 @@
           </div>
         </form>
     </div>
-    <div class="movie-grid">
-      {% for movie in search_result %}
-        <a class="card movie" href="{{ url_for('movie_detail', movie_id=movie.id) }}">
-          <div class="poster-placeholder">
-            <img src={{ movie.poster }} alt={{ movie.poster_alt }}>
-          </div>
-          <div class="content">
-            <h1>{{ movie.title }}</h1>
-          </div>
-        </a>
-      {% endfor %}
-    </div>
+    <div id="search-result"></div>
   </div>
 {% endblock %}
