Vista del historial terminada

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,19 +18,20 @@
           </a>
           {% if not session.user %}
             <div class="buttons">
-                <a id="cart" href="{{ url_for('shopping_cart')}}">
-                  <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
-                </a>
-                <a id="login" href="{{ url_for('login') }}">Iniciar sesión</a>
-                <a id="register" href="{{ url_for('register') }}">Registro</a>
+              <a id="cart" href="{{ url_for('shopping_cart')}}">
+                <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
+              </a>
+              <a id="login" href="{{ url_for('login') }}">Iniciar sesión</a>
+              <a id="register" href="{{ url_for('register') }}">Registro</a>
             </div>
           {% else %}
           Bienvenido, {{ session.user.fullname }}
             <div class="buttons">
-                <a id="cart" href="{{ url_for('shopping_cart')}}">
-                  <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
-                </a>
-                <a id="logout" href="{{ url_for('logout') }}">Cerrar sesión</a>
+              <a id="cart" href="{{ url_for('shopping_cart')}}">
+                <img src="{{ url_for('static', filename='media/icons/cart.png') }}"/>
+              </a>
+              <a id="history" href="{{ url_for('shopping_history') }}">Historial</a>
+              <a id="logout" href="{{ url_for('logout') }}">Cerrar sesión</a>
             </div>
           {% endif %}
         </div>
