--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -109,6 +109,14 @@ select:invalid {
   grid-template-columns: 1fr 3fr;
 }
 
+.row.one-five {
+  grid-template-columns: 1fr 5fr;
+}
+
+.row.one-nine {
+  grid-template-columns: 1fr 9fr;
+}
+
 .row.two-three {
   grid-template-columns: 2fr 3fr;
 }
@@ -218,47 +226,47 @@ select:invalid {
   border-radius: 0 4px 4px 0;
 }
 
-.info {
+.detail .info {
   background-color: #DCDCDC;
   border-radius: 0 4px 4px 0;
 }
 
-.info .content {
+.detail .info .content {
   padding: 20px;
   border-radius: 0 4px 0 0;
   background-color: white;
 }
 
-.info .content h1 {
+.detail .info .content h1 {
   font-size: 32px;
 }
 
-.info .content h2 {
+.detail .info .content h2 {
   margin-top: 4px;
   text-align: right;
   font-size: 26px;
   color: #6ABE44;
 }
 
-.info .details {
+.detail .info .details {
   display: grid;
   grid-template-columns: 2fr 5fr;
   row-gap: 10px;
   padding: 10px;
 }
 
-.info .details div {
+.detail .info .details div {
   display: flex;
   padding: 15px;
   align-items: center;
 }
 
-.info .details .type {
+.detail .info .details .type {
   background-color: #EFEFEF;
   font-size: 16px;
 }
 
-.info .details .data {
+.detail .info .details .data {
   background-color: #FFFFFF;
   font-size: 20px;
 }
@@ -341,18 +349,14 @@ select:invalid {
   color: #6ABE44;
 }
 
-.price-and-add {  
+.price-bar {
   display: flex;
-  justify-content: end;
-  align-items: center;
+  flex-direction: row-reverse;
+  width: 100%;
   margin-top: 20px;
 }
 
-.price-and-add h2 {
-  margin-right: 20px;
-}
-
-.price-and-add a {
+.price-bar a {
   padding: 15px 20px;
   border-radius: 4px;
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, 0.25);
@@ -360,38 +364,35 @@ select:invalid {
   font-size: 18px;
 }
 
-.shopping-cart-item-info {
-  padding-top: 15px;
-  padding-right: 15px;
-  padding-bottom: 15px;
-  display: grid;
-  grid-template-columns: 4fr 1fr;
+.shopping-cart-item {
+  position: relative;
+}
+
+.shopping-cart-item .info {
+  padding: 15px;
+}
+
+.shopping-cart-item .info {
+  padding: 15px;
+}
+
+.shopping-cart-item .remove {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 10px 20px;
+  border-radius: 4px;
+  background-color: rgb(228, 101, 122);
+}
+
+.shopping-cart-item .info .price {
+  text-align: right;
+  color: #6ABE44;
 }
 
 .empty-cart-message {
-  margin-left: 30%;
-  padding: 30px;
-}
-
-.shopping-cart-item-info .price-and-remove {
-  display: grid;
-  grid-template-rows: 3fr 1fr;
-}
-
-.price-and-remove .remove-button {
-  background-color: rgb(228, 101, 122);
-  display: flex;
-  text-align: center;
-  align-items: center;
-  height: 100%;
-  margin-left: 15px;
-  padding: 0 20px;
-  border-radius: 4px;
-}
-
-.shopping-cart-link {
-  font-weight: normal;
-  grid-template-columns: 1fr 5fr;
+  margin: 20px 0 0 20px;
+  font-size: 22px;
 }
 
 .alert {
@@ -423,15 +424,11 @@ select:invalid {
 }
 
 #logout {
-  background-color: rgb(236, 59, 89);
+  background-color: #FA8C8C;
 }
 
 #history {
   background-color: #85B7E9;
-}
-
-#logout {
-  background-color: #FA8C8C;
 }
 
 #search-icon {
