--- a/app/templates/movie-detail.html
+++ b/app/templates/movie-detail.html
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="price-and-add">
+    <div class="price-bar">
       <a href="{{ url_for('add_to_cart', movie_id=movie.id) }}">Añadir al carrito</a>
     </div>
   </div>
