--- a/app/templates/shopping-history.html
+++ b/app/templates/shopping-history.html
@@ -7,55 +7,23 @@
         <h1>Historial de compras</h1>
       </div>
     </div>
-    <div class="card">
-      <div class="content">
-        <div class="row shopping-item">
-          <div class="dot"></div>
-          <h1>El Rey León</h1>
-          <h1>24/09/2019</h1>
-          <h1 class="price">10.95€</h1>
+    {% if not shopping_history %}
+      Debug: no hay una sesión iniciada
+    {% elif shopping_history|length == 0 %}
+      Tu historial está vacío.
+    {% else %}
+      {% for item in shopping_history %}
+        <div class="card">
+          <div class="content">
+            <div class="row shopping-item">
+              <div class="dot"></div>
+              <h1>{{ item.movie_title }}</h1>
+              <h1>{{ item.date }}</h1>
+              <h1 class="price">{{ item.price }}€</h1>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="content">
-        <div class="row shopping-item">
-          <div class="dot"></div>
-          <h1>Taxi Driver</h1>
-          <h1>11/09/2019</h1>
-          <h1 class="price">4.95€</h1>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="content">
-        <div class="row shopping-item">
-          <div class="dot"></div>
-          <h1>Coco</h1>
-          <h1>11/09/2019</h1>
-          <h1 class="price">6.95€</h1>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="content">
-        <div class="row shopping-item">
-          <div class="dot"></div>
-          <h1>Fight Club</h1>
-          <h1>08/08/2019</h1>
-          <h1 class="price">4.95€</h1>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="content">
-        <div class="row shopping-item">
-          <div class="dot"></div>
-          <h1>Pulp Fiction</h1>
-          <h1>04/08/2019</h1>
-          <h1 class="price">2.95€</h1>
-        </div>
-      </div>
-    </div>
+      {% endfor %}
+    {% endif %}
   </div>
 {% endblock %}
