--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -390,6 +390,30 @@ select:invalid {
   color: #6ABE44;
 }
 
+.checkout {
+  display: flex;
+  flex-direction: column;
+  column-gap: 15px;
+  margin-top: 30px;
+  margin-left: 60%;
+  text-align: center;
+  justify-content: center;
+  background-color: rgb(202, 202, 202);
+  padding: 15px;
+  border-radius: 4px;
+}
+
+.checkout .checkout-button {
+  font-size: 20px;
+  background-color: #46DF6F;
+  text-align: center;
+  align-items: center;
+  height: 100%;
+  margin-top: 10px;
+  padding: 10px 20px 10px 20px;
+  border-radius: 4px;
+}
+
 .empty-cart-message {
   margin: 20px 0 0 20px;
   font-size: 22px;
