--- a/app/static/styles/styles.css
+++ b/app/static/styles/styles.css
@@ -125,6 +125,26 @@ select:invalid {
   grid-template-columns: 4fr 1fr;
 }
 
+.top {
+  position: absolute;
+  top: 0;
+}
+
+.right {
+  position: absolute;
+  right: 0;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 0;
+}
+
+.left {
+  position: absolute;
+  left: 0;
+}
+
 .card.movie {
   background-color: white;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.25);
@@ -382,8 +402,11 @@ select:invalid {
 .shopping-cart-item .info {
   height: 150px;
   padding: 15px;
-  grid-template-columns: 5fr 1fr;
-  row-gap: 25px;
+}
+
+.shopping-cart-item .content {
+  position: relative;
+  height: 100%;
 }
 
 .shopping-cart-item .remove {
@@ -408,6 +431,7 @@ select:invalid {
 }
 
 #cart {
+  position: relative;
   width: 40px;
   padding: 5px 0;
   background-color: whitesmoke;
@@ -416,6 +440,24 @@ select:invalid {
 #cart img {
   margin: 0 auto;
   height: 20px;
+}
+
+#cart div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: #46DF6F;
+  transform: translate(35%, -20%);
+}
+
+#cart div p {
+  font-size: 12px;
 }
 
 #login {
